Nuevos cambios en rol cocinero

--- a/cocinero-index.html
+++ b/cocinero-index.html
@@ -11,24 +11,14 @@
     <aside class="sidebar">
       <div class="logo">🏨 Bosko Hostal</div>
       <nav class="nav">
-        <a href="index.html" class="active">Menu</a>
-        <a href="usuario.html">Usuarios</a>
-        <a href="productos.html">Productos</a>
-        <a href="platos.html">Platos</a>
-        <a href="comandas.html">Comandas</a>
-        <a href="tickets.html">Tickets</a>
-        <a href="inventario.html">Inventario</a>
-        <a href="caja.html">Caja</a>
-        <a href="reservas.html">Reservas</a>
-        <a href="promociones.html">Promociones</a>
-        <a href="configuracion.html">Configuración</a>
-        <a href="auditoria.html">Auditoría</a>
+        <a href="index.html"  class="active">Menu</a>
+        <a href="./cocinero-comanda.html">Comandas</a>
       </nav>
     </aside>
 
     <main class="main-content">
       <h1>Bienvenido al Sistema del Bosko Hostal</h1>
-      <p>Selecciona una opción del menú para empezar.</p>
+      <p>ROL COCINERO</p>
     </main>
   </div>
 </body>
