--- a/mesero-index.html
+++ b/mesero-index.html
@@ -16,7 +16,7 @@
         <a href="./seccionesMesero/mesero-comandas.html">Comandas</a>
         <a href="./seccionesMesero/mesero-ticket.html">Tickets</a>
         <a href="./seccionesMesero/mesero-reserva.html">Reservas</a>
-        <a href="promociones.html">Promociones</a>
+        <a href="./seccionesMesero/mesero-promociones.html">Promociones</a>
       </nav>
     </aside>
 
